tests/purs/failing/Whitespace1.purs
-- @shouldFailWith ErrorParsingModule
module Main where

test = do
	test
