tests/purs/failing/Whitespace1.out
Error found:
at tests/purs/failing/Whitespace1.purs:5:1 - 5:2 (line 5, column 1 - line 5, column 2)

  Unable to parse module:
  Illegal whitespace character U+0009


See https://github.com/purescript/documentation/blob/master/errors/ErrorParsingModule.md for more information,
or to contribute content related to this error.

